# app

./: .gitignore  .release-please-manifest.json  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.json  tsconfig.node.json  turbo.json
.github/workflows/: release-please.yaml  release.yaml  type-check.yaml
app/: CHANGELOG.md  README.md  components.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/docs/: THEMES.md
app/src/: RokiiApp.ts  index.ts
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: core.json  migrated.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  toggle_window_visibility.rs  tray.rs
app/src-tauri/src/services/: get_installed_apps.rs  mod.rs  open_app_by_id.rs  open_devtools.rs
app/src/common/: config.ts  ipc.ts  themes.ts
app/src/common/constants/: events.ts  paths.ts  ui.ts  urls.ts
app/src/entities/: Icon.ts  ResultCreator.ts  ResultsStore.ts
app/src/entities/result/: AppResult.ts  InfoResult.ts  Result.ts  ResultCreator.ts  ScriptResult.ts
app/src/extensions/: Extension.ts  types.ts
app/src/extensions/core/: index.ts
app/src/extensions/repo/: Events.ts  ExtensionsRespository.ts
app/src/main/: Rokii.tsx  globals.css  index.tsx  settingsListener.ts  setupWindowListeners.ts
app/src/main/components/: BackButton.tsx  ResultItem.tsx  RokiiLayout.tsx
app/src/main/hooks/: useAppParamsInfo.ts  useAutocomplete.ts  useExtensionsRepository.ts  useFocusSuscription.ts  useGlobalSettings.ts  useOnAppRun.ts  useResultsAutoscroll.ts  useRokiiSettings.ts  useRunApp.ts  useRunPlugins.ts  useSearchBarEventsSubscription.ts  useSelectedResult.ts  useTermFilter.ts  useWindowListeners.ts
app/src/main/routes/: app.tsx  home.tsx  settings.tsx
app/src/main/utils/: changeTheme.ts  cursorInEndOfInput.ts  events.ts  getAutocompleteValue.ts  getHotkey.ts  getParam.ts  getUnhashedUrl.ts  groupBy.ts  pluginDefaultScope.ts
app/src/main/windowListeners/: blur.ts  index.ts
app/src/public/themes/: dark.css
app/src/services/: AppManager.ts  AutoStart.ts  AutoUpdater.ts  ExtensionModuleImporter.ts  ExtensionsFolderWatcher.ts  ExternalModuleImporter.ts  FileSystem.ts  NpmClient.ts  PackageJson.ts  RokiiMenu.ts  RokiiTray.ts  TarDownloader.ts  TrayMenu.ts  WindowManager.ts  downloadBinaryFile.ts  getReadme.ts  registerToggleShortcut.ts  toggleWindow.ts  untarArrayBuffer.ts
app/src/services/plugins/: ContextProvider.ts  externalPluginsWatcher.ts  getExternalPlugins.ts  index.ts  initializeExtensions.ts  requireExtension.ts
app/src/services/utils/: deleteScope.ts  getExtensionNameFromPath.ts
app/src/stores/: AppResultsStore.ts  AutocompleteStore.ts  ExtensionSettingsStore.ts  GlobalResultsStore.ts  ResultsStateCreator.ts  input.ts
app/src/stores/actions/: ActionResult.ts  index.ts
app/src/stores/extension-settings/: index.ts
app/src/stores/rokii-settings/: RokiiSettingsSchema.ts  defaultSettings.ts  index.ts
app/src/stores/settings/: index.ts
app/src/utils/extensions/: getCoreExtensions.ts  getExternalExtensionNames.ts  getExternalExtensions.ts  index.ts
app/src/utils/file-system/: ensureDir.ts  ensureFile.ts  index.ts
app/src/utils/requests/: downloadBinaryFile.ts  getReadme.ts  index.ts
app/src/utils/text/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: get_installed_apps.rs  main.rs
src-tauri/src/services/: get_file_icon.rs  get_installed_apps.rs  mod.rs  open_app_by_id.rs
src/common/: config.ts  themes.ts
src/common/constants/: urls.ts
src/extensions/: Extension.ts  PluginsManager.ts  types.ts
src/extensions/core/: index.ts
src/extensions/core/apps/: index.tsx
src/extensions/core/extensions-manager/: constants.ts  index.tsx  initializeAsync.ts
src/extensions/core/plugins/: index.tsx  types.d.ts
src/extensions/core/quit/: index.tsx
src/extensions/core/reload/: index.tsx
src/extensions/core/settings/: index.tsx
src/extensions/core/version/: index.ts  index.tsx
src/extensions/manager/: ExtensionsManager.ts  PluginsManager.ts  types.ts
src/main/: autoStart.ts  settingsListener.ts  setupWindowListeners.ts
src/main/components/InputBox/: Autocomplete.tsx  (+2 more)
src/main/hooks/: useAutocomplete.ts  useFocusSuscription.ts  useGetPluginResults.ts  useHashLocation.ts  useResultsAutoscroll.ts  useRunApp.ts  useRunPlugins.ts  useSearchBarEventsSubscription.ts
src/main/routes/: app.tsx  home.tsx
src/main/utils/: getAutocompleteValue.ts
src/main/windowListeners/: blur.ts
src/public/themes/: light.css
src/services/: AppTray.ts  AutoStartManager.ts  ExternalModuleImporter.ts  NpmClient.ts  showWindowWithTerm.ts  toggleWindow.ts
src/services/plugins/: ContextProvider.ts  externalPluginsWatcher.ts  getExternalPlugins.ts  index.ts  initializeExtensions.ts  initializePlugins.ts  requireExtension.ts  requirePlugin.ts
src/state/: inputStore.ts  rokiStore.ts  utils.ts
src/stores/: autocomplete.ts  rokiStore.ts
src/stores/actions/: ActionResult.ts  index.ts
(+111 files in other folders)
