[package]
name = "rokii"
version = "0.0.0"
description = "Productivity booster for Windows"
authors = ["David Jiménez <dubisdev@gmail.com>"]
license = "MIT"
repository = "https://github.com/rokiiapp/app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "protocol-asset", "devtools", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-autostart = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
serde_json = "1.0"
tauri-plugin-updater = "2.0.0-beta"
tauri-plugin-fs = { version = "2.0.0-beta", features = ["watch"] }
tauri-plugin-process = "2.0.0-beta"
tauri-plugin-clipboard-manager = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-global-shortcut = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-http = "2.0.0-beta"
tauri-plugin-notification = "2.0.0-beta"
systemicons = { git = "https://github.com/RokiiApp/systemicons", branch = "v1"}
tauri-plugin-dialog = "2.0.0-beta.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
